# OXCE-retrofw

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Extended.txt  cmake_install.cmake  git_version.h
src/: CMakeLists.txt  OpenXcom.2010.vcxproj  OpenXcom.2010.vcxproj.filters  OpenXcom.rc  OpenXcom.s  cmake_install.cmake  fallthrough.h  fmath.h  main.cpp  md5.cpp  resource.h  version.h
src/Basescape/: BaseInfoState.cpp  BaseInfoState.h  BaseView.cpp  BaseView.h  BasescapeState.cpp  BasescapeState.h  BuildFacilitiesState.cpp  BuildFacilitiesState.h  ChangeHeadquartersState.cpp  ChangeHeadquartersState.h  CraftArmorState.cpp  CraftArmorState.h  CraftEquipmentLoadState.cpp  CraftEquipmentLoadState.h  CraftEquipmentSaveState.cpp  CraftEquipmentSaveState.h  CraftEquipmentState.cpp  CraftEquipmentState.h  CraftInfoState.cpp  CraftInfoState.h  CraftPilotSelectState.cpp  CraftPilotSelectState.h  CraftPilotsState.cpp  CraftPilotsState.h  CraftSoldiersState.cpp  CraftSoldiersState.h  CraftWeaponsState.cpp  CraftWeaponsState.h  CraftsState.cpp  CraftsState.h  DismantleFacilityState.cpp  DismantleFacilityState.h  GlobalManufactureState.cpp  GlobalManufactureState.h  GlobalResearchState.cpp  GlobalResearchState.h  ManageAlienContainmentState.cpp  ManageAlienContainmentState.h  ManufactureDependenciesTreeState.cpp  ManufactureDependenciesTreeState.h  (+65 more)
src/Battlescape/: AIModule.cpp  AIModule.h  AbortMissionState.cpp  ActionMenuItem.cpp  ActionMenuItem.h  ActionMenuState.cpp  ActionMenuState.h  AlienInventory.cpp  AlienInventory.h  AlienInventoryState.cpp  AlienInventoryState.h  AliensCrashState.cpp  BattleState.cpp  BattleState.h  BattlescapeGame.cpp  BattlescapeGame.h  BattlescapeGenerator.cpp  BattlescapeGenerator.h  BattlescapeMessage.cpp  BattlescapeMessage.h  BattlescapeState.cpp  BattlescapeState.h  BriefingLightState.cpp  BriefingLightState.h  BriefingState.cpp  BriefingState.h  Camera.cpp  CannotReequipState.cpp  CannotReequipState.h  CommendationLateState.cpp  CommendationLateState.h  CommendationState.cpp  CommendationState.h  ConfirmEndMissionState.cpp  ConfirmEndMissionState.h  DebriefingState.cpp  DebriefingState.h  Explosion.cpp  Explosion.h  ExplosionBState.cpp  (+70 more)
src/Engine/: Action.cpp  Action.h  AdlibMusic.cpp  AdlibMusic.h  CatFile.cpp  CatFile.h  Collections.h  CrossPlatform.cpp  CrossPlatform.h  Exception.h  FileMap.cpp  FileMap.h  FlcPlayer.cpp  Font.cpp  Font.h  Functions.h  GMCat.cpp  GMCat.h  Game.cpp  Game.h  GraphSubset.h  HelperMeta.h  InteractiveSurface.cpp  InteractiveSurface.h  Language.cpp  Language.h  LanguagePlurality.cpp  Logger.h  ModInfo.cpp  ModInfo.h  Music.cpp  Music.h  OpenGL.cpp  OpenGL.h  OptionInfo.cpp  OptionInfo.h  Options.cpp  Options.h  Options.inc.h  Palette.cpp  (+28 more)
src/Geoscape/: AlienBaseState.cpp  AllocatePsiTrainingState.cpp  AllocatePsiTrainingState.h  AllocateTrainingState.cpp  AllocateTrainingState.h  BaseDefenseState.cpp  BaseDefenseState.h  BaseDestroyedState.cpp  BaseDestroyedState.h  BaseNameState.cpp  BaseNameState.h  BuildNewBaseState.cpp  BuildNewBaseState.h  ConfirmCydoniaState.cpp  ConfirmDestinationState.cpp  ConfirmDestinationState.h  ConfirmLandingState.cpp  ConfirmLandingState.h  ConfirmNewBaseState.cpp  Cord.h  CraftErrorState.cpp  CraftErrorState.h  CraftNotEnoughPilotsState.cpp  CraftNotEnoughPilotsState.h  CraftPatrolState.cpp  DogfightErrorState.cpp  DogfightExperienceState.cpp  DogfightExperienceState.h  DogfightState.cpp  DogfightState.h  FundingState.cpp  GeoscapeCraftState.cpp  GeoscapeCraftState.h  GeoscapeEventState.cpp  GeoscapeEventState.h  GeoscapeState.cpp  GeoscapeState.h  Globe.cpp  Globe.h  GraphsState.cpp  (+40 more)
src/Interface/: ArrowButton.h  Bar.h  BattlescapeButton.cpp  BattlescapeButton.h  ComboBox.cpp  ComboBox.h  Cursor.h  FpsCounter.cpp  FpsCounter.h  Frame.h  ImageButton.h  NumberText.cpp  NumberText.h  ScrollBar.cpp  ScrollBar.h  Slider.cpp  Slider.h  Text.cpp  Text.h  TextButton.cpp  TextButton.h  TextEdit.cpp  TextEdit.h  TextList.cpp  TextList.h  ToggleTextButton.h  Window.cpp  Window.h
src/Menu/: AbandonGameState.cpp  ConfirmLoadState.cpp  CutsceneState.cpp  CutsceneState.h  DeleteGameState.cpp  ErrorMessageState.cpp  ListGamesState.cpp  ListGamesState.h  ListLoadOriginalState.cpp  ListLoadOriginalState.h  ListLoadState.cpp  ListLoadState.h  ListSaveState.cpp  ListSaveState.h  LoadGameState.cpp  LoadGameState.h  MainMenuState.cpp  MainMenuState.h  NewBattleState.cpp  NewBattleState.h  NewGameState.cpp  NotesState.cpp  NotesState.h  OptionsAdvancedState.cpp  OptionsAdvancedState.h  OptionsAudioState.cpp  OptionsBaseState.cpp  OptionsBaseState.h  OptionsConfirmState.cpp  OptionsConfirmState.h  OptionsControlsState.cpp  OptionsControlsState.h  OptionsDefaultsState.cpp  OptionsFoldersState.cpp  OptionsFoldersState.h  OptionsInformExtendedState.cpp  OptionsInformExtendedState.h  OptionsModsState.cpp  OptionsVideoState.cpp  OptionsVideoState.h  (+15 more)
src/Mod/: AlienDeployment.cpp  AlienDeployment.h  AlienRace.cpp  AlienRace.h  Armor.cpp  Armor.h  ArticleDefinition.cpp  ArticleDefinition.h  City.h  CustomPalettes.cpp  CustomPalettes.h  ExtraSounds.cpp  ExtraSounds.h  ExtraSprites.cpp  ExtraSprites.h  MapBlock.cpp  MapBlock.h  MapData.cpp  MapData.h  MapDataSet.cpp  MapDataSet.h  MapScript.cpp  MapScript.h  Mod.cpp  Mod.h  ModScript.h  RuleAlienMission.cpp  RuleAlienMission.h  RuleArcScript.cpp  RuleArcScript.h  RuleBaseFacility.cpp  RuleBaseFacility.h  RuleBaseFacilityFunctions.h  RuleCommendations.cpp  RuleCommendations.h  RuleCountry.cpp  RuleCountry.h  RuleCraft.cpp  RuleCraft.h  RuleCraftWeapon.cpp  (+56 more)
src/Savegame/: AlienBase.cpp  AlienBase.h  AlienMission.cpp  AlienMission.h  Base.cpp  Base.h  BaseFacility.cpp  BaseFacility.h  BattleItem.cpp  BattleItem.h  BattleUnit.cpp  BattleUnit.h  BattleUnitStatistics.h  Country.cpp  Country.h  Craft.cpp  Craft.h  CraftWeapon.cpp  CraftWeapon.h  CraftWeaponProjectile.cpp  CraftWeaponProjectile.h  EquipmentLayoutItem.cpp  EquipmentLayoutItem.h  GameTime.cpp  GameTime.h  GeoscapeEvent.cpp  GeoscapeEvent.h  HitLog.cpp  HitLog.h  Node.h  (+33 more)
(+48 files in other folders)
